[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
app-common = { path = "../app-common", features = ["user"] }
axum = "0.7"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11"
libc = "0.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
